--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Movies</title>
     
     <link rel="shortcut icon" i class="fas fa-film">
-    <link rel="stylesheet" href="css/Stylesheet.css">
+    <link rel="stylesheet" href="Stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <script src="https://kit.fontawesome.com/ca1e986d11.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700;800;900&display=swap" rel="stylesheet">
