--- a/Shawshank.html
+++ b/Shawshank.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="content body animate__animated animate__fadeInDown">
                 <div class="actions">
-                <a href="..index.html" class="close">
+                <a href="index.html" class="close">
                 <span>X</span>
                 </a>
             </div>
